--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <main>
         <section id="Container">
             <article class="cartão">
-            <div class="cartão__"
+            <div class="cartão__conteudo">
+        <h3>Programação</h3>
+        <div class+="cartão__conteudo__pergunta"></
+             O que é JavaScript?
+            </div>
+            <div>cartão__conteudo__resposta">
             </article>
         </section>
     </main>
